--- a/v1/manifest.json
+++ b/v1/manifest.json
@@ -6,5 +6,5 @@
   "chrome_url_overrides": {
     "newtab": "newtab.html"
   },
-  "permissions": ["storage"]
+  "permissions": ["storage", "tabs"]
 }
