Update manifest to allow for topsites perms

--- a/v1/manifest.json
+++ b/v1/manifest.json
@@ -3,8 +3,10 @@
   "name": "Custom New Tab",
   "version": "1.0",
   "description": "A Firefox new tab extension that randomly changes the background.",
-  "chrome_url_overrides": {
-    "newtab": "newtab.html"
-  },
-  "permissions": ["storage", "tabs"]
+  "permissions": ["activeTab", "storage"],
+  "background": {
+  "scripts": ["newtab.js"],
+  "persistent": false
+},
+  "permissions": ["storage", "tabs", "topSites"]
 }
