--- a/v1/manifest.json
+++ b/v1/manifest.json
@@ -3,10 +3,6 @@
   "name": "Custom New Tab",
   "version": "1.0",
   "description": "A Firefox new tab extension that randomly changes the background.",
-  "permissions": ["activeTab", "storage"],
-  "background": {
-  "scripts": ["newtab.js"],
-  "persistent": false
-},
-  "permissions": ["storage", "tabs", "topSites"]
+  "background": {"scripts": ["newtab.js"], "persistent": false},
+  "permissions": ["activeTab", "storage", "tabs", "topSites"]
 }
